--- a/index.html
+++ b/index.html
@@ -1,16 +1,48 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Final</title>
-	<link href = "css/style.css" type = "text/css" rel = "stylesheet" />
-</head>
-<body>
+	<head>
+		<title>
+		Final
+		</title>
+		<link href = "css/style.css" type = "text/css" rel = "stylesheet" />
+	</head>
+	<body>
 
-<audio controls>
-  <source src="music/The Final Countdown.mp3" type="audio/mpeg">
-</audio>
+	<audio controls>
+	<source src="music/The Final Countdown.mp3" type="audio/mpeg">
+	</audio>
 
+	<div class = "heading">
+			<h1>Final</h1>
+				<ul class = "menu">
+					<li><a href = "index.html">Home</a></li>
+					<li>
+						<ul>
+						<li><a href = ".html"></a></li>
+						<li><a href = ".html"></a></li>
+						<li><a href = ".html"></a></li>
+						</ul>
+					</li>	
+					<li>
+						<ul>
+						<li><a href = ".html"></a></li>
+						<li><a href = ".html"></a></li>
+						</ul>
+					</li>
+					<li>
+						<ul>
+						<li><a href = ".html"></a></li>
+						<li><a href = ".html"></a></li>
+						</ul>
+					</li>
+					<li>
+						<ul>
+						<li><a href = ".html"></a></li>
+						<li><a href = ".html"></a></li>
+						</ul>
+					</li>
+				</ul>
+		</div>
 
-
-</body>
+	</body>
 </html>
