edit some number
added all pages. added new div to each one. need to complete div with
images and text. added countDown stuff idk if it'll work

--- a/page 2.html
+++ b/page 2.html
@@ -224,6 +224,10 @@
     <!-- #endregion Jssor Slider End -->
 		
 
+
+	<div class = "description">
+	</div>
+	<script src = "js/countDown.js"></script>
 	
 	<div class = "body">
 	<p>Hi</p>
