--- a/page 2.html
+++ b/page 2.html
@@ -173,23 +173,23 @@
         <div data-u="slides" style="cursor: default; position: relative; top: 0px; left: 0px; width: 600px; height: 300px; overflow: hidden;">
             <div data-p="112.50" style="display: none;">
                 <a href = "page 2.html"><img data-u="image" src="img/001.jpg" /></a>
-                <div data-u="caption" data-t="0" style="position: absolute; top: 320px; left: 30px; width: 350px; height: 30px; background-color: rgba(235,81,0,0.5); font-size: 20px; color: #ffffff; line-height: 30px; text-align: center;">Something</div>
+                <div data-u="caption" data-t="0" style="position: absolute; top: 320px; left: 30px; width: 350px; height: 30px; background-color: rgba(235,81,0,0.5); font-size: 20px; color: #ffffff; line-height: 30px; text-align: center;">Calendar</div>
             </div>
             <div data-p="112.50" style="display: none;">
                 <a href = "page 3.html"><img data-u="image" src="img/002.jpg" /></a>
-                <div data-u="caption" data-t="0" style="position: absolute; top: 320px; left: 30px; width: 350px; height: 30px; background-color: rgba(235,81,0,0.5); font-size: 20px; color: #ffffff; line-height: 30px; text-align: center;">Something else</div>
+                <div data-u="caption" data-t="0" style="position: absolute; top: 320px; left: 30px; width: 350px; height: 30px; background-color: rgba(235,81,0,0.5); font-size: 20px; color: #ffffff; line-height: 30px; text-align: center;">Clock</div>
             </div>
 			<div data-p="112.50" style="display: none;">
                 <a href = "page 4.html"><img data-u="image" src="img/003.jpg" /></a>
-                <div data-u="caption" data-t="0" style="position: absolute; top: 320px; left: 30px; width: 350px; height: 30px; background-color: rgba(235,81,0,0.5); font-size: 20px; color: #ffffff; line-height: 30px; text-align: center;">Some other thing</div>
+                <div data-u="caption" data-t="0" style="position: absolute; top: 320px; left: 30px; width: 350px; height: 30px; background-color: rgba(235,81,0,0.5); font-size: 20px; color: #ffffff; line-height: 30px; text-align: center;">Santa</div>
             </div>
 			<div data-p="112.50" style="display: none;">
                 <a href = "page 5.html"><img data-u="image" src="img/004.jpg" /></a>
-                <div data-u="caption" data-t="0" style="position: absolute; top: 320px; left: 30px; width: 350px; height: 30px; background-color: rgba(235,81,0,0.5); font-size: 20px; color: #ffffff; line-height: 30px; text-align: center;">A thing</div>
+                <div data-u="caption" data-t="0" style="position: absolute; top: 320px; left: 30px; width: 350px; height: 30px; background-color: rgba(235,81,0,0.5); font-size: 20px; color: #ffffff; line-height: 30px; text-align: center;">Birthday</div>
             </div>
 			<div data-p="112.50" style="display: none;">
                 <a href = "page 6.html"><img data-u="image" src="img/005.jpg" /></a>
-                <div data-u="caption" data-t="0" style="position: absolute; top: 320px; left: 30px; width: 350px; height: 30px; background-color: rgba(235,81,0,0.5); font-size: 20px; color: #ffffff; line-height: 30px; text-align: center;">What</div>
+                <div data-u="caption" data-t="0" style="position: absolute; top: 320px; left: 30px; width: 350px; height: 30px; background-color: rgba(235,81,0,0.5); font-size: 20px; color: #ffffff; line-height: 30px; text-align: center;">New Year</div>
             </div>
 			<div data-p="112.50" style="display: none;">
                 <a href = "page 7.html"><img data-u="image" src="img/006.jpg" /></a>
@@ -222,12 +222,7 @@
     </script>
 
     <!-- #endregion Jssor Slider End -->
-		
 
-
-	<div class = "description">
-	</div>
-	<script src = "js/countDown.js"></script>
 	
 	<div class = "body">
 	<p>Hi</p>
